gbf-experiments/tests/snapshots/canonical_json_s2__report_s2__pass_with_distill_warn.snap
---
source: gbf-experiments/tests/canonical_json_s2.rs
expression: "warn.to_markdown().expect(\"warn report markdown\")"
---
---
{"ablation_self_hash":"sha256:27bedcbdac36939c7cb9500020af5141f00be346aa3812bc1cecda7da46c7075","api_drift_check_passed":true,"baseline_self_hash_carried_from_s1":"sha256:0505050505050505050505050505050505050505050505050505050505050505","decision":{"kind":"ProceedToS3-with-distill-review"},"falsification_s2_passed":true,"falsification_s2_suite_hash":"sha256:0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b","first_result_commit":"2222222222222222222222222222222222222222","generated_at":"2026-05-10T00:00:00Z","hypothesis_statuses":{"H1":{"kind":"confirmed"},"H2":{"kind":"confirmed"},"H3":{"kind":"refuted"},"H4":{"kind":"confirmed"},"H5":{"kind":"confirmed"},"H6":{"kind":"confirmed"}},"linearstate_public_api_snapshot_hash":"sha256:0707070707070707070707070707070707070707070707070707070707070707","linearstate_smoke_self_hash":"sha256:0909090909090909090909090909090909090909090909090909090909090909","loss_grad_flow_self_hash":"sha256:0808080808080808080808080808080808080808080808080808080808080808","oracle_re_run_passed":true,"oracle_re_run_self_hash":"sha256:d3cdb78953ce3fdbb20c75bc03c9c850cb8151dc4fce2eb1fda08d8ed2ce3655","pass_version_S2":{"major":0,"minor":1,"patch":0},"per_seed_artifacts":[{"build_kind":"s2-ternary-full","checkpoint_self_hashes":{"final":"sha256:1717171717171717171717171717171717171717171717171717171717171717","phase_a":"sha256:1414141414141414141414141414141414141414141414141414141414141414","phase_b":"sha256:1515151515151515151515151515151515151515151515151515151515151515","phase_c":"sha256:1616161616161616161616161616161616161616161616161616161616161616"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a","phase_log_self_hash":"sha256:1818181818181818181818181818181818181818181818181818181818181818","score_self_hash":"sha256:1919191919191919191919191919191919191919191919191919191919191919","seed":0},{"build_kind":"s2-ternary-full","checkpoint_self_hashes":{"final":"sha256:1818181818181818181818181818181818181818181818181818181818181818","phase_a":"sha256:1515151515151515151515151515151515151515151515151515151515151515","phase_b":"sha256:1616161616161616161616161616161616161616161616161616161616161616","phase_c":"sha256:1717171717171717171717171717171717171717171717171717171717171717"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b","phase_log_self_hash":"sha256:1919191919191919191919191919191919191919191919191919191919191919","score_self_hash":"sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a","seed":1},{"build_kind":"s2-ternary-full","checkpoint_self_hashes":{"final":"sha256:1919191919191919191919191919191919191919191919191919191919191919","phase_a":"sha256:1616161616161616161616161616161616161616161616161616161616161616","phase_b":"sha256:1717171717171717171717171717171717171717171717171717171717171717","phase_c":"sha256:1818181818181818181818181818181818181818181818181818181818181818"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c","phase_log_self_hash":"sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a","score_self_hash":"sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b","seed":2},{"build_kind":"s2-ternary-full","checkpoint_self_hashes":{"final":"sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a","phase_a":"sha256:1717171717171717171717171717171717171717171717171717171717171717","phase_b":"sha256:1818181818181818181818181818181818181818181818181818181818181818","phase_c":"sha256:1919191919191919191919191919191919191919191919191919191919191919"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d","phase_log_self_hash":"sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b","score_self_hash":"sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c","seed":3},{"build_kind":"s2-ternary-full","checkpoint_self_hashes":{"final":"sha256:1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b","phase_a":"sha256:1818181818181818181818181818181818181818181818181818181818181818","phase_b":"sha256:1919191919191919191919191919191919191919191919191919191919191919","phase_c":"sha256:1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e1e","phase_log_self_hash":"sha256:1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c1c","score_self_hash":"sha256:1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d1d","seed":4},{"build_kind":"s2-fp-full","checkpoint_self_hashes":{"final":"sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b","phase_a":"sha256:2828282828282828282828282828282828282828282828282828282828282828","phase_b":"sha256:2929292929292929292929292929292929292929292929292929292929292929","phase_c":"sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e","phase_log_self_hash":"sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c","score_self_hash":"sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d","seed":0},{"build_kind":"s2-fp-full","checkpoint_self_hashes":{"final":"sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c","phase_a":"sha256:2929292929292929292929292929292929292929292929292929292929292929","phase_b":"sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a","phase_c":"sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f","phase_log_self_hash":"sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d","score_self_hash":"sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e","seed":1},{"build_kind":"s2-fp-full","checkpoint_self_hashes":{"final":"sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d","phase_a":"sha256:2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a","phase_b":"sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b","phase_c":"sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:3030303030303030303030303030303030303030303030303030303030303030","phase_log_self_hash":"sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e","score_self_hash":"sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f","seed":2},{"build_kind":"s2-fp-full","checkpoint_self_hashes":{"final":"sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e","phase_a":"sha256:2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2b","phase_b":"sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c","phase_c":"sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:3131313131313131313131313131313131313131313131313131313131313131","phase_log_self_hash":"sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f","score_self_hash":"sha256:3030303030303030303030303030303030303030303030303030303030303030","seed":3},{"build_kind":"s2-fp-full","checkpoint_self_hashes":{"final":"sha256:2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f","phase_a":"sha256:2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c2c","phase_b":"sha256:2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d2d","phase_c":"sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e"},"completion":{"kind":"Completed"},"distill_log_self_hash":"sha256:3232323232323232323232323232323232323232323232323232323232323232","phase_log_self_hash":"sha256:3030303030303030303030303030303030303030303030303030303030303030","score_self_hash":"sha256:3131313131313131313131313131313131313131313131313131313131313131","seed":4},{"build_kind":"s2-ternary-nodistill","checkpoint_self_hashes":{"final":"sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f","phase_a":"sha256:3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c3c","phase_b":"sha256:3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d","phase_c":"sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e"},"completion":{"kind":"Completed"},"distill_log_self_hash":null,"phase_log_self_hash":"sha256:4040404040404040404040404040404040404040404040404040404040404040","score_self_hash":"sha256:4141414141414141414141414141414141414141414141414141414141414141","seed":0},{"build_kind":"s2-ternary-nodistill","checkpoint_self_hashes":{"final":"sha256:4040404040404040404040404040404040404040404040404040404040404040","phase_a":"sha256:3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d","phase_b":"sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e","phase_c":"sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f"},"completion":{"kind":"Completed"},"distill_log_self_hash":null,"phase_log_self_hash":"sha256:4141414141414141414141414141414141414141414141414141414141414141","score_self_hash":"sha256:4242424242424242424242424242424242424242424242424242424242424242","seed":1},{"build_kind":"s2-ternary-nodistill","checkpoint_self_hashes":{"final":"sha256:4141414141414141414141414141414141414141414141414141414141414141","phase_a":"sha256:3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e3e","phase_b":"sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f","phase_c":"sha256:4040404040404040404040404040404040404040404040404040404040404040"},"completion":{"kind":"Completed"},"distill_log_self_hash":null,"phase_log_self_hash":"sha256:4242424242424242424242424242424242424242424242424242424242424242","score_self_hash":"sha256:4343434343434343434343434343434343434343434343434343434343434343","seed":2},{"build_kind":"s2-ternary-nodistill","checkpoint_self_hashes":{"final":"sha256:4242424242424242424242424242424242424242424242424242424242424242","phase_a":"sha256:3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f3f","phase_b":"sha256:4040404040404040404040404040404040404040404040404040404040404040","phase_c":"sha256:4141414141414141414141414141414141414141414141414141414141414141"},"completion":{"kind":"Completed"},"distill_log_self_hash":null,"phase_log_self_hash":"sha256:4343434343434343434343434343434343434343434343434343434343434343","score_self_hash":"sha256:4444444444444444444444444444444444444444444444444444444444444444","seed":3},{"build_kind":"s2-ternary-nodistill","checkpoint_self_hashes":{"final":"sha256:4343434343434343434343434343434343434343434343434343434343434343","phase_a":"sha256:4040404040404040404040404040404040404040404040404040404040404040","phase_b":"sha256:4141414141414141414141414141414141414141414141414141414141414141","phase_c":"sha256:4242424242424242424242424242424242424242424242424242424242424242"},"completion":{"kind":"Completed"},"distill_log_self_hash":null,"phase_log_self_hash":"sha256:4444444444444444444444444444444444444444444444444444444444444444","score_self_hash":"sha256:4545454545454545454545454545454545454545454545454545454545454545","seed":4}],"phase_transition_integ_passed":true,"phase_transition_integ_self_hash":"sha256:0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a","predictions_commit":"1111111111111111111111111111111111111111","predictions_section_hash":"sha256:7f096e20ccd869b3542d8bbe471818b09823e9f1a794b56c38849684348c9a61","qat_public_api_snapshot_hash":"sha256:0606060606060606060606060606060606060606060606060606060606060606","report_self_hash":"sha256:36ac945087485d1da7f0eedf6755c00fd9b9f95598ed0449795170b4bde066ea","rfc_revision":"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa","s2_outcome":"Pass-with-distill-warn","schema":"s2_report.v1"}
---
# S2 Report

## Pre-registered predictions

H2 ternary-full gap remains <= 0.5 bpc.

## Observed

All five seeds completed for all three report build kinds.

## Hypothesis verdicts

H1 through H6 are explicit in front matter.

## Falsification analysis

No falsification rule fired.

## Surprises

None.

## Decision

`ProceedToS3`. Closure candidate.

## Reproducibility statement

`cargo run -p gbf-experiments -- s2 replay` with pass_version_S2 0.1.0.
